k8s/dev-requestanalyzer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sirius-request-analyzer
  labels:
    app: sirius-request-analyzer
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: sirius-request-analyzer
  template:
    metadata:
      labels:
        app: sirius-request-analyzer
    spec:
      containers:
        - name: sirius-request-analyzer-service
          image: "gabgcdev/sirius-request-analyzer"
          imagePullPolicy: Always
