k8s/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sirius-auth
  labels:
    app: sirius-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sirius-auth
  template:
    metadata:
      labels:
        app: sirius-auth
    spec:
      containers:
        - name: sirius-auth-service
          image: "gabgcdev/contigocommunity:sirius_auth_service"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: sirius-auth-service
spec:
  selector:
    app: sirius-auth
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30004
