k8s/buddy-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sirius-buddy
  labels:
    app: sirius-buddy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sirius-buddy
  template:
    metadata:
      labels:
        app: sirius-buddy
    spec:
      containers:
        - name: sirius-buddy-service
          image: "gabgcdev/contigocommunity:sirius_buddy_service"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: sirius-buddy-service
spec:
  selector:
    app: sirius-buddy
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30003
