k8s/dev-realtime-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: sirius-realtime-service
spec:
  selector:
    app: sirius-realtime
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sirius-realtime
  labels:
    app: sirius-realtime
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: sirius-realtime
  template:
    metadata:
      labels:
        app: sirius-realtime
    spec:
      containers:
        - name: sirius-realtime-service
          image: "gabgcdev/contigocommunity:sirius_realtime_service"
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
