k8s/dev-user-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: sirius-user-service
spec:
  selector:
    app: sirius-user
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sirius-user
  labels:
    app: sirius-user
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: sirius-user
  template:
    metadata:
      labels:
        app: sirius-user
    spec:
      containers:
        - name: sirius-user-service
          image: "gabgcdev/sirius-user"
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 10
