k8s/realtime-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sirius-realtime
  labels:
    app: sirius-realtime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sirius-realtime
  template:
    metadata:
      labels:
        app: sirius-realtime
    spec:
      containers:
        - name: sirius-realtime-service
          image: "gabgcdev/contigocommunity:sirius_realtime_service"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: sirius-realtime-service
spec:
  selector:
    app: sirius-realtime
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30001
