k8s/user-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sirius-user
  labels:
    app: sirius-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sirius-user
  template:
    metadata:
      labels:
        app: sirius-user
    spec:
      containers:
        - name: sirius-user-service
          image: "gabgcdev/contigocommunity:sirius_user_service"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: sirius-user-service
spec:
  selector:
    app: sirius-user
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30000
